<resources>
    <string name="app_name">AI Scope</string>
    <string name="welcome_msg">Welcome</string>
    <string name="start_msg">Start capturing a new sample</string>
    <string name="button_start_capturing">Start capturing</string>
    <string name="error_message_field_empty">Field cannot be empty</string>
    <string name="error_message_logout_failure">Error when during logout process</string>
    <string name="confirmation_message_saved">Saved</string>
    <string name="profile">profile</string>
    <string name="spinner_empty_option">- select -</string>
    <string name="mandatory_field_error">Mandatory field</string>
    <!-- PrivacyPolicy -->
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_error_message">There was an error\n\n[%s]\n\nClick to retry.</string>
    <string name="privacy_policy_i_agree">I agree</string>
    <string name="privacy_policy_cancel">Cancel</string>
    <!-- SelectDisease -->
    <string name="text_select_disease_spinner_hint">Select a disease</string>
    <string name="text_logout">Logout</string>
    <string name="logout_flow_exit_dialog_message">You will logout and go back to login screen.</string>
    <string name="main_version">v%1$s</string>
    <!-- SamplePreparation -->
    <string name="sample_preparation_activity_title">Sample preparation</string>
    <string name="sample_preparation_water_type_title">Water</string>
    <string name="sample_preparation_sample_age_title">Sample age</string>
    <string name="sample_preparation_giemsa_title">Uses Giemsa</string>
    <string name="sample_preparation_giemsa_fp_title">Giemsa filtering or precipitating</string>
    <string name="sample_preparation_pbs_title">Uses PBS</string>
    <string name="sample_preparation_slides_reuse_title">Reuses slides</string>
    <string name="sample_preparation_continue">continue</string>
    <string name="sample_preparation_snackbar_error">An error occurred while saving your sample preparation data. Please try again.</string>
    <string name="sample_preparation_snackbar_retry">TRY AGAIN</string>
    <string name="water_type_bottled">Bottled</string>
    <string name="water_type_distilled">Distilled</string>
    <string name="water_type_tap">Tap</string>
    <string name="water_type_well">Well</string>
    <string name="water_type_unknown">Unknown</string>
    <string name="sample_age_old">Old</string>
    <string name="sample_age_fresh">Fresh</string>
    <!-- MicroscopeQuality -->
    <string name="microscope_quality_activity_title">Microscope quality</string>
    <string name="microscope_quality_damaged_title">Microscope damaged/malfunctioning</string>
    <string name="microscope_quality_magnification_title">Magnification</string>
    <string name="microscope_quality_magnification_error">Enter a number between 0 and 2000</string>
    <string name="microscope_quality_snackbar_error">An error occurred while saving your microscope quality data. Please try again.</string>
    <string name="microscope_quality_snackbar_retry">TRY AGAIN</string>
    <!-- CaptureImage -->
    <string name="capture_activity_title">Capture an image</string>
    <string name="image_could_not_be_taken">Image could not be taken</string>
    <string name="image_could_not_be_deleted">Image could not be deleted</string>
    <string name="you_cannot_take_a_picture_while_zooming">You can not take a picture while zooming</string>
    <!-- Mask -->
    <string name="mask_activity_title">Highlight the parasites</string>
    <string name="delete_image">Delete</string>
    <string name="button_done_text">Done</string>
    <string name="mask_activity_undo">Undo</string>
    <string name="mask_activity_redo">Redo</string>
    <string name="mask_activity_stages">Select stage</string>
    <!-- Metadata -->
    <string name="metadata_activity_title">Add data</string>
    <string name="metadata_comments_helper">Please do not include any patient personal information</string>
    <string name="metadata_comments_hint">Comments (optional)</string>
    <string name="metadata_sample_add_image">Add image</string>
    <string name="metadata_sample_image_content_description">Sample image</string>
    <string name="metadata_sample_mask_dot_description">Masked image</string>
    <string name="metadata_section_blood_sample_title">Blood sample</string>
    <string name="metadata_section_smear_type_title">Smear type</string>
    <string name="metadata_blood_smear_thick">Thick</string>
    <string name="metadata_blood_smear_thin">Thin</string>
    <string name="metadata_save_sample">Save sample</string>
    <string name="metadata_invalid_form">Not all required fields are filled</string>
    <string name="capture_flow_exit_dialog_title"><font color="#ffffffff">Warning</font></string>
    <string name="capture_flow_exit_dialog_message">Are you sure you want to exit? Your sample data will be lost.</string>
    <string name="capture_flow_exit_dialog_back_message">Are you sure you want to go back to the previous step? Your image data will be lost.</string>
    <string name="capture_flow_exit_dialog_stay">No, stay</string>
    <string name="capture_flow_exit_dialog_exit">Yes, exit</string>
    <string name="capture_flow_delete_image_dialog_message">Are you sure you want to delete? Your image will be lost.</string>
    <string name="delete_image_positive">Yes, delete</string>
    <string name="delete_image_cancel">No, cancel</string>
    <string name="metadata_species_title">Species</string>
    <string name="metadata_stage_title">Stage</string>
    <string name="metadata_snackbar_success">Sample saved successfully!</string>
    <string name="metadata_snackbar_error">An error occurred while saving your sample. Please try again.</string>
    <string name="metadata_snackbar_retry">TRY AGAIN</string>
    <!-- Sample completion -->
    <string name="complete_sample_activity_title">Complete sample data</string>
    <string name="complete_sample_metadata_tab">Add Data</string>
    <string name="complete_sample_sampleprep_tab">Sample Prep</string>
    <string name="complete_sample_quality_tab">Quality</string>
    <string name="complete_sample_save_sample">Save sample</string>
    <string name="complete_sample_first_time_action_label">Continue</string>

    <!-- Malaria -->
    <string name="malaria_name">Malaria</string>
    <string name="malaria_species_p_falciparum">P. falciparum</string>
    <string name="malaria_species_p_vivax">P. vivax</string>
    <string name="malaria_species_p_ovale">P. ovale</string>
    <string name="malaria_species_p_malariae">P. malariae</string>
    <string name="malaria_species_p_knowlesi">P. knowlesi</string>
    <string-array name="metadata_malaria_species">
        <item>@string/malaria_species_p_falciparum</item>
        <item>@string/malaria_species_p_vivax</item>
        <item>@string/malaria_species_p_ovale</item>
        <item>@string/malaria_species_p_malariae</item>
        <item>@string/malaria_species_p_knowlesi</item>
    </string-array>
    <string name="malaria_stage_ring">Ring</string>
    <string name="malaria_stage_trophozoite">Trophozoite</string>
    <string name="malaria_stage_schizont">Schizont</string>
    <string name="malaria_stage_gametocyte">Gametocyte</string>
    <string name="malaria_stage_artefact">Artefact</string>
</resources>
