...
        android:gravity="center_horizontal"
        android:text="@string/start_msg"
        android:textColor="@color/colorTextSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <Spinner
        android:id="@+id/dropdown_select_disease"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/activity_main_dropdown_margin_start"
        android:layout_marginTop="@dimen/activity_main_dropdown_margin_top"
        android:layout_marginEnd="@dimen/activity_main_dropdown_margin_end"
        android:entries="@array/diseases"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/start_message" />

    <Button
        android:id="@+id/main_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_main_continue_button_margin_start"
        android:layout_marginTop="@dimen/activity_main_continue_button_margin_top"
        android:layout_marginEnd="@dimen/activity_main_continue_button_margin_end"
        android:text="@string/button_start_capturing"
...
