<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="@string/profile"
        android:icon="@drawable/ic_user_profile"
        app:showAsAction="always" />
</menu>